--- a/modbus_config.json
+++ b/modbus_config.json
@@ -1,14 +1,6 @@
 {
-    "mode": "tcp_rtu",
+    "mode": "tcp",
     "tcp_port": 1502,
-    "unit_id": 1,
-    "serial": {
-        "device": "/dev/ttyACM0",
-        "baudrate": 9600,
-        "parity": "N",
-        "data_bits": 8,
-        "stop_bits": 1
-    },
     "coils": {
         "start_address": 0,
         "count": 10
